doc/pjdfstest/tests/errors/erofs/sidebar-items.js
window.SIDEBAR_ITEMS = {"enum":["RemountOptions"],"fn":["can_run_erofs","remount","with_readonly_fs"],"macro":["erofs_named_test_case","erofs_new_file_test_case"]};